Akeeba Data Compliance 1.2.3
================================================================================
+ CLI tool to replay the audit log
+ Custom error pages when FEF is not installed or an unhandled PHP exception occurred
~ Update path to cacert.pem
~ Use Joomla's domain name when setting the cookie acceptance, er, cookie
~ Banner links to EU sites should have rel="noopener"
# [LOW] Minified JS / CSS was not being loaded by default

Akeeba Data Compliance 1.2.2
================================================================================
+ Joomla 4 compatibility (pre-release beta 1)
~ Use JAccess instead of DB queries [gh-29]
# [LOW] Public site pages flash when the cookie plugin is enabled
# [LOW] Empty box when viewing the Options page of a different user as an admin
# [MEDIUM] Cookie popup shows up in Off-line mode but cannot be acted upon
# [HIGH] Cookies plugin would fail when using path-style URLs to access articles (thank you @brianteeman for reporting this)
# [HIGH] When an admin viewed the Options page for a different user the displayed current consent preference was wrong
# [HIGH] When an admin deleted a user's profile the audit trail showed the user deleting themselves instead of the admin
# [HIGH] Export may fail if the Akeeba Subscriptions plugin is enabled and the user was created after AS7 was installed

Akeeba Data Compliance 1.2.1
================================================================================
# [HIGH] Automatic account deletion (lifecycle) wasn't working

Akeeba Data Compliance 1.2.0
================================================================================
+ Common PHP version warning scripts
+ Dark Mode
~ PHP 7.4 compatibility
# [HIGH] CLI (CRON) scripts could sometimes stop with a Joomla crash due to Joomla's mishandling of the session under CLI.
# [HIGH] Forced password reset in Joomla causes an infinite redirection loop (gh-28)

Akeeba Data Compliance 1.1.1