@@ -3,7 +3,7 @@
 ;; @license   GNU General Public License version 3, or later
 
 PLG_SYSTEM_DATACOMPLIANCECOOKIE="System - Data Compliance Cookie Conformance"
-PLG_SYSTEM_DATACOMPLIANCECOOKIE_DESCRIPTION="Allows your site to comply with the cookie law by disabling cookies unless explicitly allowed."
+PLG_SYSTEM_DATACOMPLIANCECOOKIE_DESCRIPTION="<strong>DEPRECATED – JOOMLA! 3 ONLY</strong>. Allows your site to comply with the cookie law by disabling cookies unless explicitly allowed.<br/>This plugin only works on Joomla 3 and is considered deprecated. It will be removed when a Joomla 4-only version of this component (Akeeba DataCompliance 2.0) will be released."
 
 PLG_SYSTEM_DATACOMPLIANCECOOKIE_COOKIENAME_LABEL="Preferences cookie name"
 PLG_SYSTEM_DATACOMPLIANCECOOKIE_COOKIENAME_DESC="This cookie is always stored on the user's browser when they make a choice (accept or reject cookies on our site). This is legal since this is a mandatory cookie for the correct operation and does not store any personal information about the user (not even their IP address). Default: plg_system_datacompliancecookie. You may want to set it to something descriptive, such as exampledotcom_cookie_storage_preferences"
