@@ -3,4 +3,4 @@
 ;; @license   GNU General Public License version 3, or later
 
 PLG_SYSTEM_DATACOMPLIANCECOOKIE="System - Data Compliance Cookie Conformance"
-PLG_SYSTEM_DATACOMPLIANCECOOKIE_DESCRIPTION="Allows your site to comply with the cookie law by disabling cookies unless explicitly allowed."
+PLG_SYSTEM_DATACOMPLIANCECOOKIE_DESCRIPTION="<strong>DEPRECATED – JOOMLA! 3 ONLY</strong>. Allows your site to comply with the cookie law by disabling cookies unless explicitly allowed.<br/>This plugin only works on Joomla 3 and is considered deprecated. It will be removed when a Joomla 4-only version of this component (Akeeba DataCompliance 2.0) will be released."
